POWR-791 - made entity browser select button sticky, misc css adjustments, added image grid overlay, disabled unused view displays, removed document entity browser, updated paths for file icons to be absolute so they work in all instances

--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - field.storage.group.field_shortname_or_acronym
     - field.storage.media.field_document
     - image.style.medium
     - image.style.thumbnail
@@ -1006,7 +1007,7 @@ display:
           group_type: group
           admin_label: ''
           label: Name
-          exclude: false
+          exclude: true
           alter:
             alter_text: false
             text: ''
@@ -1073,8 +1074,8 @@ display:
           label: Document
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: "{{ name }}<br>\r\n{{ field_document }}"
             make_link: false
             path: ''
             absolute: false
@@ -1570,7 +1571,7 @@ display:
           expose:
             operator_id: uid_op
             label: Author
-            description: 'Start typing to see a list of matching names'
+            description: '<blank>'
             use_operator: false
             operator: uid_op
             identifier: uid
@@ -1821,72 +1822,6 @@ display:
           hide_alter_empty: true
           entity_type: media
           plugin_id: entity_browser_select
-        thumbnail__target_id:
-          id: thumbnail__target_id
-          table: media_field_data
-          field: thumbnail__target_id
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: image
-          settings:
-            image_style: thumbnail_200x200
-            image_link: ''
-          group_column: ''
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: media
-          entity_field: thumbnail
-          plugin_id: field
         name:
           id: name
           table: media_field_data
@@ -2017,6 +1952,69 @@ display:
           entity_type: group
           entity_field: label
           plugin_id: field
+        field_shortname_or_acronym:
+          id: field_shortname_or_acronym
+          table: group__field_shortname_or_acronym
+          field: field_shortname_or_acronym
+          relationship: gid
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: string
+          settings:
+            link_to_entity: false
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         name_1:
           id: name_1
           table: users_field_data
@@ -2068,7 +2066,7 @@ display:
           click_sort_column: value
           type: user_name
           settings:
-            link_to_entity: true
+            link_to_entity: false
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -2220,7 +2218,117 @@ display:
           id: nothing
           table: views
           field: nothing
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: true
+            text: "<div class=\"image-grid-overlay\">\r\n  <div class=\"image-name\">{{ name|length > 48? name|slice(0, 48)|raw ~ '...' : name|raw }}</div>\r\n  <div>{{ field_shortname_or_acronym }}</div>\r\n  <div>{{ name_1 }}</div>\r\n  <div>{{ changed }}</div>\r\n</div>"
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: false
           plugin_id: custom
+        thumbnail__target_id:
+          id: thumbnail__target_id
+          table: media_field_data
+          field: thumbnail__target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: div
+          element_class: media-thumbnail
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: image
+          settings:
+            image_style: thumbnail_200x200
+            image_link: ''
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          entity_type: media
+          entity_field: thumbnail
+          plugin_id: field
       filters:
         status:
           id: status
@@ -2583,7 +2691,9 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
-      tags: {  }
+      tags:
+        - 'config:field.storage.group.field_shortname_or_acronym'
+        - extensions
   entity_browser_3:
     display_plugin: entity_browser
     id: entity_browser_3
@@ -3454,6 +3564,7 @@ display:
           entity_type: media
           entity_field: uid
           plugin_id: standard
+      enabled: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -4178,7 +4289,7 @@ display:
           expose:
             operator_id: uid_op
             label: Name
-            description: 'Start typing to see a list of matching names'
+            description: '<blank>'
             use_operator: false
             operator: uid_op
             identifier: uid
@@ -5234,6 +5345,7 @@ display:
           entity_type: media
           entity_field: name
           plugin_id: standard
+      enabled: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -6126,6 +6238,7 @@ display:
           entity_type: media
           entity_field: uid
           plugin_id: standard
+      enabled: false
     cache_metadata:
       max-age: -1
       contexts:
