POWR-765 Create ds template for related content

--- a/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.city_service.related.yml
@@ -28,13 +28,22 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_card
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
+      first:
         - node_title
     fields:
       node_title:
