--- a/web/sites/default/config/core.entity_view_display.node.event.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.related.yml
@@ -33,13 +33,22 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_card
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
+      first:
         - node_title
         - field_start_date
         - group_date_and_time
@@ -83,7 +92,7 @@ third_party_settings:
         id: ''
         classes: 'event--date h4'
       label: 'Start to end date'
-      region: content
+      region: hidden
     group_start_to_end_time:
       children:
         - field_all_day
@@ -103,7 +112,7 @@ third_party_settings:
         id: ''
         classes: 'event--time h4 mb-4'
       label: 'Start to end time'
-      region: content
+      region: hidden
 id: node.event.related
 targetEntityType: node
 bundle: event
@@ -112,7 +121,7 @@ content:
   field_all_day:
     type: boolean
     weight: 3
-    region: content
+    region: first
     label: hidden
     settings:
       format: custom
@@ -183,7 +192,7 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: datetime_default
-    region: content
+    region: first
   field_end_time:
     weight: 5
     label: hidden
@@ -219,7 +228,7 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: time_formatter
-    region: content
+    region: first
   field_start_date:
     weight: 0
     label: hidden
@@ -256,7 +265,7 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: datetime_default
-    region: content
+    region: first
   field_start_time:
     weight: 4
     label: hidden
@@ -292,7 +301,7 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: time_formatter
-    region: content
+    region: first
 hidden:
   content_moderation_control: true
   field_body: true
