--- a/web/sites/default/config/core.entity_view_display.node.service_location.related.yml
+++ b/web/sites/default/config/core.entity_view_display.node.service_location.related.yml
@@ -22,13 +22,22 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_card
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers:
+          first: div
+          second: div
+        outer_wrapper: div
+        attributes: ''
+        link_attribute: ''
+        link_custom: ''
+        classes:
+          layout_class: {  }
     regions:
-      content:
+      first:
         - node_title
         - field_open_hours
         - field_building
@@ -63,7 +72,7 @@ content:
       link: false
     third_party_settings: {  }
     type: entity_reference_entity_view
-    region: content
+    region: first
   field_floor:
     weight: 3
     label: hidden
@@ -71,7 +80,7 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-    region: content
+    region: first
   field_open_hours:
     weight: 1
     label: hidden
@@ -79,10 +88,10 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
-    region: content
+    region: first
   service_location_directions_link_entity_view_1:
     weight: 4
-    region: content
+    region: first
     settings: {  }
     third_party_settings: {  }
 hidden:
