--- a/web/sites/default/config/views.view.related.yml
+++ b/web/sites/default/config/views.view.related.yml
@@ -55,9 +55,9 @@ display:
       style:
         type: default
         options:
-          grouping: {  }
           row_class: ''
           default_row_class: false
+          uses_fields: false
       row:
         type: 'entity:node'
         options:
@@ -223,6 +223,7 @@ display:
       filter_groups:
         operator: AND
         groups: {  }
+      css_class: card-group--related
     cache_metadata:
       max-age: -1
       contexts:
