--- a/web/themes/custom/cloudy/cloudy.layouts.yml
+++ b/web/themes/custom/cloudy/cloudy.layouts.yml
@@ -8,3 +8,14 @@ cloudy_featured-with-image:
       label: Content
     second:
       label: Image
+
+cloudy_card:
+  label: Card
+  category: Cloudy
+  template: templates/ds/layout--ds-card
+  class: '\Drupal\ds\Plugin\DsLayout'
+  regions:
+    first:
+      label: Content
+    second:
+      label: Image
