POWR-757 Add "Mark for review" action

--- a/web/sites/default/config/views.view.admin_group_content_bulk_operations.yml
+++ b/web/sites/default/config/views.view.admin_group_content_bulk_operations.yml
@@ -219,6 +219,7 @@ display:
             node_make_unsticky_action: 0
             node_unpromote_action: 0
             node_publish_action: node_publish_action
+            mark_for_review_action: mark_for_review_action
             change_group_action: change_group_action
             views_bulk_operations_delete_entity: views_bulk_operations_delete_entity
             pathauto_update_alias: 0
@@ -228,13 +229,15 @@ display:
             'entity:save_action:node': 0
           preconfiguration:
             node_unpublish_action:
-              label_override: ''
+              label_override: 'Archive content'
             node_publish_action:
+              label_override: 'Publish content'
+            mark_for_review_action:
               label_override: ''
             change_group_action:
-              label_override: ''
+              label_override: 'Change group'
             views_bulk_operations_delete_entity:
-              label_override: ''
+              label_override: 'Delete content'
           plugin_id: views_bulk_operations_bulk_form
         title:
           id: title
