--- a/web/sites/default/config/views.view.admin_group_content_bulk_operations.yml
+++ b/web/sites/default/config/views.view.admin_group_content_bulk_operations.yml
@@ -213,12 +213,14 @@ display:
             node_unpublish_by_keyword_action: 0
             node_make_sticky_action: 0
             node_promote_action: 0
-            node_unpublish_action: node_unpublish_action
+            node_unpublish_action: 0
             node_save_action: 0
             node_assign_owner_action: 0
             node_make_unsticky_action: 0
             node_unpromote_action: 0
-            node_publish_action: node_publish_action
+            node_publish_action: 0
+            portland_publish_action: portland_publish_action
+            portland_archive_action: portland_archive_action
             mark_for_review_action: mark_for_review_action
             change_group_action: change_group_action
             views_bulk_operations_delete_entity: views_bulk_operations_delete_entity
@@ -228,10 +230,10 @@ display:
             'entity:publish_action:node': 0
             'entity:save_action:node': 0
           preconfiguration:
-            node_unpublish_action:
-              label_override: 'Archive content'
-            node_publish_action:
-              label_override: 'Publish content'
+            portland_publish_action:
+              label_override: ' Publish content'
+            portland_archive_action:
+              label_override: ' Archive content'
             mark_for_review_action:
               label_override: ''
             change_group_action:
