--- a/web/sites/default/config/seckit.settings.yml
+++ b/web/sites/default/config/seckit.settings.yml
@@ -1,20 +1,20 @@
 seckit_xss:
   csp:
     checkbox: true
-    report-only: true
-    default-src: '''self'''
-    script-src: '''self'' ''unsafe-inline'' ''unsafe-eval'' https://www.google-analytics.com https://unpkg.com https://cdn.jsdelivr.net'
+    report-only: false
+    default-src: '''self'' ''unsafe-inline'' ''unsafe-eval'' chrome-extension: data: *.ssl.fastly.net cdnjs.cloudflare.com maxcdn.bootstrapcdn.com cdn.jsdelivr.net unpkg.com www.google-analytics.com bam.nr-data.net js-agent.newrelic.com fontlibrary.org use.fontawesome.com fonts.googleapis.com fonts.gstatic.com themes.googleusercontent.com *.portlandoregon.gov *.portlandmaps.com *.arcgis.com server.arcgisonline.com *.openstreetmap.org *.opentopomap.org *.tiles.wmflabs.org *.loop11.com'
+    script-src: ''
     object-src: ''
-    img-src: '''self'' https://www.google-analytics.com'
+    img-src: ''
     media-src: ''
     frame-src: '''self'' https://www.youtube.com/embed/'
     frame-ancestors: ''
     child-src: ''
-    font-src: '''self'' https://fonts.gstatic.com https://themes.googleusercontent.com https://use.fontawesome.com'
-    connect-src: '''self'' https://www.google-analytics.com'
-    report-uri: 'https://portlandgov.report-uri.com/r/d/csp/wizard'
+    font-src: ''
+    connect-src: ''
+    report-uri: 'https://portlandgov.report-uri.com/r/d/csp/enforce'
     policy-uri: ''
-    style-src: '''self'' ''unsafe-inline'' https://fonts.googleapis.com/css https://use.fontawesome.com'
+    style-src: ''
   x_xss:
     seckit_x_xss_option_disable: Disabled
     seckit_x_xss_option_0: '0'
@@ -32,18 +32,18 @@ seckit_clickjacking:
 seckit_ssl:
   hsts: true
   hsts_subdomains: true
-  hsts_max_age: 300
+  hsts_max_age: 2592000
   hsts_preload: false
 seckit_ct:
-  expect_ct: false
+  expect_ct: true
   max_age: 86400
-  report_uri: ''
-  enforce: false
+  report_uri: 'https://portlandgov.report-uri.com/r/d/ct/enforce'
+  enforce: true
 seckit_various:
   from_origin: false
   from_origin_destination: same
-  referrer_policy: false
-  referrer_policy_policy: unsafe-url
+  referrer_policy: true
+  referrer_policy_policy: no-referrer-when-downgrade
   disable_autocomplete: false
 _core:
   default_config_hash: tEkqVdaa812lro0-CjtQGv-aeFNZ088m1F3yAbuy8hQ
