POWR-765 Update related content displays

--- a/web/sites/default/config/field.field.node.page.field_related_content.yml
+++ b/web/sites/default/config/field.field.node.page.field_related_content.yml
@@ -4,7 +4,6 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_related_content
-    - node.type.building
     - node.type.city_service
     - node.type.event
     - node.type.news
@@ -21,7 +20,7 @@ field_name: field_related_content
 entity_type: node
 bundle: page
 label: 'Related content'
-description: 'Add related content that might be the next step in a community member''s journey through the website.'
+description: 'Start typing the title of content that is related and the field will autocomplete based on a partial match. This content will appear in a "Related" section. This is a one-way relationship for this content only. If you want the relationship to be reciprocal, add it to the other content as well.'
 required: false
 translatable: true
 default_value: {  }
@@ -30,7 +29,6 @@ settings:
   handler: 'default:node'
   handler_settings:
     target_bundles:
-      building: building
       event: event
       news: news
       page: page
