--- a/web/sites/default/config/field.field.node.event.field_related_content.yml
+++ b/web/sites/default/config/field.field.node.event.field_related_content.yml
@@ -20,7 +20,7 @@ field_name: field_related_content
 entity_type: node
 bundle: event
 label: Related
-description: ''
+description: 'Start typing the title of content that is related and the field will autocomplete based on a partial match. This content will appear in a "Related" section. This is a one-way relationship for this content only. If you want the relationship to be reciprocal, add it to the other content as well.'
 required: false
 translatable: true
 default_value: {  }
