POWR-765 Restrict related content block display to content paths

--- a/web/sites/default/config/block.block.cloudy_views_block__related_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__related_block_1.yml
@@ -39,6 +39,6 @@ visibility:
       node: '@node.node_route_context:node'
   request_path:
     id: request_path
-    pages: 'node/*/*'
+    pages: '/node/*/*'
     negate: true
     context_mapping: {  }
