--- a/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.teaser.yml
@@ -5,11 +5,13 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.field_all_day
-    - field.field.node.event.field_body
+    - field.field.node.event.field_body_content
     - field.field.node.event.field_end_date
     - field.field.node.event.field_end_time
     - field.field.node.event.field_event_location
+    - field.field.node.event.field_group
     - field.field.node.event.field_legacy_path
+    - field.field.node.event.field_reviewer
     - field.field.node.event.field_start_date
     - field.field.node.event.field_start_time
     - field.field.node.event.field_summary
@@ -33,11 +35,13 @@ content:
     third_party_settings: {  }
 hidden:
   field_all_day: true
-  field_body: true
+  field_body_content: true
   field_end_date: true
   field_end_time: true
   field_event_location: true
+  field_group: true
   field_legacy_path: true
+  field_reviewer: true
   field_start_date: true
   field_start_time: true
   field_summary: true
