POWR-765 Restrict related content block display to match new page content type

--- a/web/sites/default/config/block.block.cloudy_views_block__related_block_1.yml
+++ b/web/sites/default/config/block.block.cloudy_views_block__related_block_1.yml
@@ -30,10 +30,9 @@ visibility:
     bundles:
       city_service: city_service
       event: event
-      guide: guide
-      information: information
       news: news
       page: page
+      service_location: service_location
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
