POWR-811 Configure search index rendered view mode for new content types

--- a/web/sites/default/config/search_api.index.content.yml
+++ b/web/sites/default/config/search_api.index.content.yml
@@ -2,11 +2,12 @@ uuid: f95bcbfe-4e01-4412-9d31-1add6e2c029e
 langcode: en
 status: true
 dependencies:
+  module:
+    - node
+    - search_api
+    - portland
   config:
     - search_api.server.database
-  module:
-    - search_api
-    - node
 _core:
   default_config_hash: qEX0c8Yf878jYMC-3TrFlGSSNQeGbl3u0Hs6GJfxA38
 id: content
@@ -44,22 +45,31 @@ field_settings:
           event: default
           guide: default
           information: default
+          news: default
           notification: default
+          page: default
           service_location: default
+          top_search: default
   status:
-    label: null
+    label: status
     datasource_id: 'entity:node'
     property_path: status
     type: boolean
     indexed_locked: true
     type_locked: true
+    dependencies:
+      module:
+        - node
   uid:
-    label: null
+    label: uid
     datasource_id: 'entity:node'
     property_path: uid
     type: integer
     indexed_locked: true
     type_locked: true
+    dependencies:
+      module:
+        - node
 datasource_settings:
   'entity:node':
     bundles:
@@ -98,6 +108,7 @@ processor_settings:
       preprocess_index: -9
       preprocess_query: -8
     all_fields: false
+  portland_group_title_field: {  }
   rendered_item: {  }
   stopwords:
     fields:
