--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -3,18 +3,18 @@ langcode: en
 status: true
 dependencies:
   module:
-    - node
-    - taxonomy
     - group
     - search_api_solr
+    - node
+    - taxonomy
     - search_api
     - portland
   config:
-    - field.storage.node.field_body
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
+    - field.storage.node.field_body
     - field.storage.node.field_summary
     - search_api.server.searchstax
 id: full_index
@@ -165,15 +165,12 @@ field_settings:
           program: default
           project: default
         'entity:node':
-          alert: default
-          building: default
           city_service: default
           event: default
           guide: default
           information: default
           news: default
-          notification: default
-          service_location: default
+          page: default
         'entity:taxonomy_term':
           audience: default
           community_actions: default
