POWR-742 add new alert text field, update views, add templates

--- a/web/sites/default/config/core.entity_view_display.node.alert.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.default.yml
@@ -4,13 +4,14 @@ status: true
 dependencies:
   config:
     - field.field.node.alert.field_action_link
+    - field.field.node.alert.field_alert_text
     - field.field.node.alert.field_severity
     - field.field.node.alert.field_summary
     - node.type.alert
   module:
-    - link
     - options
     - panelizer
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -23,33 +24,22 @@ targetEntityType: node
 bundle: alert
 mode: default
 content:
-  field_action_link:
-    weight: 2
-    label: above
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
+  field_alert_text:
+    weight: 1
+    label: hidden
+    settings: {  }
     third_party_settings: {  }
-    type: link
+    type: text_default
     region: content
   field_severity:
     weight: 0
-    label: above
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
-  field_summary:
-    weight: 1
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
 hidden:
   content_moderation_control: true
+  field_action_link: true
+  field_summary: true
   links: true
