--- a/web/sites/default/config/core.entity_view_display.node.alert.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.featured.yml
@@ -1,9 +1,9 @@
-uuid: dbccdb29-121c-445f-83f6-22bd7123164c
+uuid: 8c95f79d-f48e-44c8-9d9b-27261178dfd0
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.featured
     - field.field.node.alert.field_action_link
     - field.field.node.alert.field_alert_text
     - field.field.node.alert.field_severity
@@ -31,13 +31,7 @@ third_party_settings:
       content:
         - node_title
         - field_alert_text
-        - node_changed_date
     fields:
-      node_changed_date:
-        plugin_id: node_changed_date
-        weight: 2
-        label: inline
-        formatter: ds_post_date_long
       node_title:
         plugin_id: node_title
         weight: 0
@@ -53,10 +47,10 @@ third_party_settings:
             lb: ''
             lb-col: false
             classes: {  }
-id: node.alert.teaser
+id: node.alert.featured
 targetEntityType: node
 bundle: alert
-mode: teaser
+mode: featured
 content:
   field_alert_text:
     weight: 1
