--- a/web/sites/default/config/views.view.alerts.yml
+++ b/web/sites/default/config/views.view.alerts.yml
@@ -3,6 +3,8 @@ langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.featured
+    - core.entity_view_mode.node.teaser
     - field.storage.node.field_action_link
     - field.storage.node.field_severity
     - field.storage.node.field_summary
@@ -14,7 +16,6 @@ dependencies:
     - link
     - node
     - options
-    - portland
     - user
 id: alerts
 label: Alerts
@@ -62,21 +63,16 @@ display:
           items_per_page: null
           offset: 0
       style:
-        type: portland_alerts
+        type: default
         options:
-          mapping:
-            toggle_title_field: 1
-            title_field: title
-            toggle_id_field: 1
-            id_field: nid
-            toggle_changed_field: 1
-            changed_field: changed
-            type_field: field_severity
-            summary_field: field_summary
-            action_link_field: field_action_link
-          dismissible: 0
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
       row:
-        type: fields
+        type: 'entity:node'
+        options:
+          relationship: none
+          view_mode: teaser
       fields:
         field_severity:
           id: field_severity
@@ -622,6 +618,7 @@ display:
         - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
+        - extensions
   block_1:
     display_plugin: block
     id: block_1
@@ -630,25 +627,19 @@ display:
     display_options:
       display_extenders: {  }
       style:
-        type: portland_alerts
+        type: default
         options:
-          mapping:
-            toggle_title_field: 0
-            title_field: title
-            toggle_id_field: 1
-            id_field: nid
-            toggle_changed_field: 1
-            changed_field: changed
-            type_field: field_severity
-            summary_field: field_summary
-            action_link_field: field_action_link
-          dismissible: 1
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
       defaults:
         style: false
         row: false
       row:
-        type: fields
-        options: {  }
+        type: 'entity:node'
+        options:
+          relationship: none
+          view_mode: featured
     cache_metadata:
       max-age: -1
       contexts:
@@ -661,6 +652,7 @@ display:
         - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
+        - extensions
   page_1:
     display_plugin: page
     id: page_1
@@ -693,3 +685,4 @@ display:
         - 'config:field.storage.node.field_severity'
         - 'config:field.storage.node.field_summary'
         - 'config:workflow_list'
+        - extensions
