--- a/web/sites/default/config/core.entity_form_display.node.alert.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.alert.default.yml
@@ -4,13 +4,16 @@ status: true
 dependencies:
   config:
     - field.field.node.alert.field_action_link
+    - field.field.node.alert.field_alert_text
     - field.field.node.alert.field_severity
     - field.field.node.alert.field_summary
     - node.type.alert
   module:
+    - allowed_formats
     - content_moderation
-    - link
+    - maxlength
     - path
+    - text
 id: node.alert.default
 targetEntityType: node
 bundle: alert
@@ -22,32 +25,27 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_action_link:
-    weight: 26
+  field_alert_text:
+    weight: 2
     settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
+      rows: 2
+      placeholder: ''
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
+      maxlength:
+        maxlength_js: 200
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
+    type: text_textarea
     region: content
   field_severity:
     weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_select
-    region: content
-  field_summary:
-    weight: 2
-    settings:
-      rows: 2
-      placeholder: ''
-    third_party_settings:
-      maxlength:
-        maxlength_js: 300
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
-        maxlength_js_enforce: true
-        maxlength_js_truncate_html: true
-    type: string_textarea
     region: content
   moderation_state:
     type: moderation_state_default
@@ -91,5 +89,7 @@ content:
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_action_link: true
+  field_summary: true
   promote: true
   sticky: true
