POWR-757 Add media actions

--- a/web/sites/default/config/views.view.admin_group_content_bulk_operations.yml
+++ b/web/sites/default/config/views.view.admin_group_content_bulk_operations.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.storage.node.field_page_type
     - workflows.workflow.editorial
   module:
+    - content_lock
     - content_moderation
     - group
     - node
@@ -16,7 +17,7 @@ dependencies:
 _core:
   default_config_hash: tS8PbpJX90aRFC3-UTgXzdqkq7_2frk2pz4TMijEebM
 id: admin_group_content_bulk_operations
-label: 'Admin: Group Content Bulk Operations'
+label: 'Admin: Content with VBO'
 module: node
 description: 'Find and manage content.'
 tag: default
@@ -389,6 +390,59 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: field
+        is_locked:
+          id: is_locked
+          table: content_lock
+          field: is_locked
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: 'Is locked'
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: true
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          type: yes-no
+          type_custom_true: ''
+          type_custom_false: ''
+          not: false
+          plugin_id: boolean
         field_group:
           id: field_group
           table: node__field_group
@@ -951,7 +1005,7 @@ display:
             description: ''
             identifier: field_group_target_id
             optional: true
-            widget: radios
+            widget: select
             multiple: false
             remember: false
             default_group: All
@@ -973,6 +1027,53 @@ display:
                   min: ''
                   max: ''
           plugin_id: numeric
+        is_locked:
+          id: is_locked
+          table: content_lock
+          field: is_locked
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '='
+          value: All
+          group: 1
+          exposed: true
+          expose:
+            operator_id: ''
+            label: 'Is Locked'
+            description: ''
+            use_operator: false
+            operator: is_locked_op
+            identifier: is_locked
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+              sitewide_editor: '0'
+          is_grouped: true
+          group_info:
+            label: 'Is locked'
+            description: ''
+            identifier: is_locked
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items:
+              1:
+                title: 'Yes'
+                operator: '='
+                value: '1'
+              2:
+                title: 'No'
+                operator: '='
+                value: '0'
+          plugin_id: content_lock_filter
       sorts: {  }
       title: Content
       empty:
@@ -1063,10 +1164,10 @@ display:
         - extensions
   page_1:
     display_options:
-      path: admin/content/node
+      path: admin/content/table-vbo
       menu:
-        type: tab
-        title: 'Group Content Bulk Op'
+        type: none
+        title: 'Content with VBO'
         description: ''
         expanded: false
         parent: ''
