--- a/web/modules/custom/portland/portland.links.task.yml
+++ b/web/modules/custom/portland/portland.links.task.yml
@@ -21,4 +21,14 @@ portland.add_media:
   base_route: 'entity.group.canonical'
   route_name: 'entity.group_content.group_media_add_page'
   weight: 170
+portland.media_table_vbo:
+  title: 'Media table VBO'
+  parent_id: entity.media.collection
+  route_name: view.media.page_media_vbo
+  weight: 30
+portland.content_table_vbo:
+  title: 'Content table VBO'
+  parent_id: system.admin_content
+  route_name: view.admin_group_content_bulk_operations.page_1
+  weight: 30
 
