POWR-742 move around block, remove old notifications views, add new notifications views, styling

--- a/web/sites/default/config/core.entity_view_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.default.yml
@@ -4,15 +4,15 @@ status: true
 dependencies:
   config:
     - field.field.node.notification.field_action_link
+    - field.field.node.notification.field_alert_text
     - field.field.node.notification.field_group
     - field.field.node.notification.field_notification_severity
     - field.field.node.notification.field_reviewer
     - field.field.node.notification.field_summary
     - node.type.notification
   module:
-    - link
-    - options
     - panelizer
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -25,28 +25,16 @@ targetEntityType: node
 bundle: notification
 mode: default
 content:
-  field_action_link:
-    weight: 2
-    label: above
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
-    third_party_settings: {  }
-    type: link
-    region: content
-  field_notification_severity:
-    weight: 0
-    label: above
+  field_alert_text:
+    weight: 1
+    label: hidden
     settings: {  }
     third_party_settings: {  }
-    type: list_default
+    type: text_default
     region: content
   field_summary:
-    weight: 1
-    label: above
+    weight: 0
+    label: hidden
     settings:
       link_to_entity: false
     third_party_settings: {  }
@@ -54,6 +42,8 @@ content:
     region: content
 hidden:
   content_moderation_control: true
+  field_action_link: true
   field_group: true
+  field_notification_severity: true
   field_reviewer: true
   links: true
