--- a/web/sites/default/config/core.entity_view_display.node.notification.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.notification.featured.yml
@@ -1,9 +1,9 @@
-uuid: 5cf35105-4633-4cc1-9b5b-618ebf8224c2
+uuid: 0e7c8ef6-cdac-4ebf-9b35-843e65920a9b
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.featured
     - field.field.node.notification.field_action_link
     - field.field.node.notification.field_alert_text
     - field.field.node.notification.field_group
@@ -21,18 +21,18 @@ third_party_settings:
     custom: false
     allow: false
     default: default
-id: node.notification.teaser
+id: node.notification.featured
 targetEntityType: node
 bundle: notification
-mode: teaser
+mode: featured
 content:
   field_alert_text:
-    type: text_default
     weight: 0
-    region: content
     label: hidden
     settings: {  }
     third_party_settings: {  }
+    type: text_default
+    region: content
 hidden:
   content_moderation_control: true
   field_action_link: true
