--- a/web/sites/default/config/core.entity_form_display.node.notification.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.notification.default.yml
@@ -4,16 +4,19 @@ status: true
 dependencies:
   config:
     - field.field.node.notification.field_action_link
+    - field.field.node.notification.field_alert_text
     - field.field.node.notification.field_group
     - field.field.node.notification.field_notification_severity
     - field.field.node.notification.field_reviewer
     - field.field.node.notification.field_summary
     - node.type.notification
   module:
+    - allowed_formats
     - chosen_field
     - content_moderation
-    - link
+    - maxlength
     - path
+    - text
 id: node.notification.default
 targetEntityType: node
 bundle: notification
@@ -21,20 +24,28 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 5
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_action_link:
-    weight: 3
+  field_alert_text:
+    weight: 2
     settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
+      rows: 3
+      placeholder: ''
+    third_party_settings:
+      allowed_formats:
+        hide_help: '1'
+        hide_guidelines: '1'
+      maxlength:
+        maxlength_js: 300
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: true
+        maxlength_js_truncate_html: true
+    type: text_textarea
     region: content
   field_group:
-    weight: 8
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -46,7 +57,7 @@ content:
     type: options_select
     region: content
   field_reviewer:
-    weight: 9
+    weight: 8
     settings:
       match_operator: CONTAINS
       size: 60
@@ -54,28 +65,15 @@ content:
     third_party_settings: {  }
     type: entity_reference_autocomplete
     region: content
-  field_summary:
-    weight: 2
-    settings:
-      rows: 3
-      placeholder: ''
-    third_party_settings:
-      maxlength:
-        maxlength_js: 300
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
-        maxlength_js_enforce: false
-        maxlength_js_truncate_html: false
-    type: string_textarea
-    region: content
   moderation_state:
     type: moderation_state_default
-    weight: 10
+    weight: 9
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 5
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -89,7 +87,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 4
+    weight: 3
     settings:
       match_operator: CONTAINS
       size: 60
@@ -97,11 +95,13 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 7
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
 hidden:
+  field_action_link: true
+  field_summary: true
   promote: true
   status: true
   sticky: true
