--- a/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.search_result.yml
@@ -75,6 +75,7 @@ hidden:
   field_event_location: true
   field_group: true
   field_legacy_path: true
+  field_related_content: true
   field_reviewer: true
   field_start_date: true
   field_start_time: true
