--- a/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.teaser.yml
@@ -171,6 +171,7 @@ hidden:
   field_group: true
   field_legacy_path: true
   field_published_on: true
+  field_related_content: true
   field_reviewer: true
   field_topics: true
   links: true
