POWR-771-2 Update image media to use focal point and add featured image field to News

--- a/web/sites/default/config/core.entity_form_display.media.image.media_browser.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.media_browser.yml
@@ -4,13 +4,14 @@ status: true
 dependencies:
   config:
     - core.entity_form_mode.media.media_browser
+    - field.field.media.image.field_group
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
-    - image.style.medium
+    - image.style.thumbnail_200x200
     - media.type.image
   module:
     - content_moderation
-    - image_widget_crop
+    - focal_point
     - lightning_media
     - path
 _core:
@@ -28,17 +29,13 @@ content:
     third_party_settings: {  }
     region: content
   image:
-    type: image_widget_crop
+    type: image_focal_point
     weight: 0
     settings:
-      preview_image_style: medium
+      preview_image_style: thumbnail_200x200
+      preview_link: true
+      offsets: '50,50'
       progress_indicator: throbber
-      crop_list:
-        - freeform
-      show_crop_area: true
-      crop_preview_image_style: crop_thumbnail
-      show_default_crop: true
-      warn_multiple_usages: false
     third_party_settings:
       lightning_media:
         file_links: false
@@ -73,4 +70,5 @@ content:
     third_party_settings: {  }
 hidden:
   created: true
+  field_group: true
   uid: true
