--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -3,10 +3,12 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.media_browser
     - field.field.node.news.field_body
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
+    - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
@@ -18,8 +20,10 @@ dependencies:
   module:
     - allowed_formats
     - chosen_field
+    - conditional_fields
     - content_moderation
     - datetime
+    - entity_browser
     - maxlength
     - path
     - text
@@ -81,6 +85,38 @@ content:
           bundle: news
     type: datetime_default
     region: content
+  field_featured_media:
+    type: entity_browser_entity_reference
+    weight: 3
+    settings:
+      entity_browser: media_browser
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: embedded_100
+      field_widget_replace: false
+      open: false
+    region: content
+    third_party_settings:
+      conditional_fields:
+        ca80418a-f2ae-407f-8b32-758dab6ebcf7:
+          dependee: field_feature_this_content
+          settings:
+            state: visible
+            condition: checked
+            grouping: AND
+            values_set: 1
+            value: ''
+            values: {  }
+            value_form:
+              value: false
+            effect: show
+            effect_options: {  }
+            selector: ''
+          entity_type: node
+          bundle: news
   field_group:
     weight: 14
     settings: {  }
@@ -120,7 +156,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_summary:
-    weight: 4
+    weight: 5
     settings:
       rows: 2
       placeholder: ''
@@ -133,7 +169,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 3
+    weight: 4
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
