--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -434,11 +434,11 @@ display:
           entity_field: changed
         moderation_state:
           id: moderation_state
-          table: content_moderation_state_field_data
+          table: node_field_data
           field: moderation_state
           relationship: none
           group_type: group
-          admin_label: 'Moderation state'
+          admin_label: ''
           label: 'Moderation state'
           exclude: false
           alter:
@@ -476,14 +476,13 @@ display:
           element_wrapper_type: ''
           element_wrapper_class: ''
           element_default_classes: true
-          empty: N/A
+          empty: ''
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: false
+          type: content_moderation_state
+          settings: {  }
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -494,9 +493,8 @@ display:
           multi_type: separator
           separator: ', '
           field_api_classes: false
-          entity_type: content_moderation_state
-          entity_field: moderation_state
-          plugin_id: field
+          entity_type: node
+          plugin_id: moderation_state_field
         field_legacy_path:
           id: field_legacy_path
           table: node__field_legacy_path
